--- a/src/components/input/_input-uplift.scss
+++ b/src/components/input/_input-uplift.scss
@@ -40,16 +40,7 @@ label.required .label-text:not(.accessible)::after,
 .field .checkbox-label,
 .field .checkbox > label {
   align-items: center;
-  display: flex;
 }
-
-/*
-.field-short {
-  input {
-    padding: 2px 5px;
-  }
-}
-*/
 
 html:not(.is-firefox) {
   .field-short {
